syntax = "proto3";

package batch;

import "google/protobuf/timestamp.proto";

message Batch {
    string id = 1;
    string namme = 2;
    string section_id = 3;
    bool is_active = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message BatchResponse {
    Batch batch = 1;
}

